--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
                 <img src="images/kh-bushblend.png" class="bush">
                 <img src="images/kh-manuka.png" class="manuka">
                 <img src="images/kh-rewarewa.png" class="rewarewa">
-                <div class="gallery"><h1>Gallery</h1></div>
-                <a name="gallery"></a>
+                
+                <div class="gallery">
+                        <a name="gallery"></a>
+                    <h1>Gallery</h1></div>
+               
             <img src="images/ig1PNG.PNG" class="ig1">
             <img src="images/ig2.PNG"class="ig2">
             <img src="images/ig3.PNG" class="ig3">
