--- a/index.html
+++ b/index.html
@@ -5,24 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display&display=swap" rel="stylesheet">
     <title>KH Honey</title>
 </head>
 <body>
+        <header>
+                <nav>
+                      <input type="checkbox" id="css-toggle-menu" name="css-toggle-menu"> 
+                      <ul class="main">
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#about">About Us</a></li>
+                            <li><a href="#products">Products</a></li>
+                            <li><a href="#gallery">Gallery</a></li>
+                            <li><a href="#social">Social</a></li>
+                      </ul> 
+                      <label for="css-toggle-menu" id="css-toggle-menu"></label> 
+                </nav>
+             </header>
+             
     <div class="wrapper">
     <div class="homeareas">
         <a name="home"></a>
-            <img src="images/logo.png" class="imglogo">
-   <div class="nav">
-            <div class="nav">
-        <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#products">Our Products</a></li>
-        <li><a href="#gallery">Gallery</a></li>
-        <li><a href="#social">Social</a></li>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display&display=swap" rel="stylesheet">
-        </ul></div>
-        </div>
         <img src="images/beecloseup.jpg" class="imgbee">
 
         
