--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="homeareas">
 
-            <img src="images/beecloseup.jpg" class="imgbee">
+            <img src="images/beecloseup.jpg" class="imgbee" alt="page banner">
             <header>
                 <nav>
                     <ul>
@@ -62,7 +62,7 @@
                     Thanks for your support!</p>
 
             </div>
-            <img src="images/circlebees.jpg" class="imgbees">
+            <img src="images/circlebees.jpg" class="imgbees" alt="img of bees in circle">
             <div class="products">
                 <a name="products"></a>
                 <h1>Our Products</h1>
@@ -77,24 +77,24 @@
         <div class="gallerycontainers">
 
 
-            <img src="images/kh-bushblend.png" class="bush">
-            <img src="images/kh-manuka.png" class="manuka">
-            <img src="images/kh-rewarewa.png" class="rewarewa">
+            <img src="images/kh-bushblend.png" class="bush" alt="Bush Blend honey">
+            <img src="images/kh-manuka.png" class="manuka" alt="Manuka honey">
+            <img src="images/kh-rewarewa.png" class="rewarewa" alt="Rewarewa honey">
 
             <div class="gallery">
                 <a name="gallery"></a>
                 <h1>Gallery</h1>
             </div>
 
-            <img src="images/ig1PNG.PNG" class="ig1">
-            <img src="images/ig2.PNG" class="ig2">
-            <img src="images/ig3.PNG" class="ig3">
-            <img src="images/ig4.PNG" class="ig4">
-            <img src="images/ig5.PNG" class="ig5">
-            <img src="images/ig6.PNG" class="ig6">
-            <img src="images/ig7.PNG" class="ig7">
-            <img src="images/ig8.PNG" class="ig8">
-            <img src="images/ig9.PNG" class="ig9">
+            <img src="images/ig1PNG.PNG" class="ig1" alt="Bee hive">
+            <img src="images/ig2.PNG" class="ig2"alt="bees on hive">
+            <img src="images/ig3.PNG" class="ig3"alt="bee smoker">
+            <img src="images/ig4.PNG" class="ig4"alt="honey pot">
+            <img src="images/ig5.PNG" class="ig5"alt="swarm">
+            <img src="images/ig6.PNG" class="ig6"alt="queen plugs">
+            <img src="images/ig7.PNG" class="ig7"alt="bee on flower">
+            <img src="images/ig8.PNG" class="ig8"alt="comb on frame">
+            <img src="images/ig9.PNG" class="ig9"alt="hives">
 
             <div class="footer">
                 <h1>Follow Us On Social Media</h1>
@@ -102,11 +102,13 @@
                 <a name="social"></a>
 
                 <div class="gallerycontainer">
-                    <a href="https://www.facebook.com/Kingdomhives/"><img src="images/facebook.png" class="fb"></a>
-                    <a href="https://www.instagram.com/kingdomhives/"><img src="images/instagram.png" class="ig"></a>
-                    <a href="https://www.youtube.com/channel/UCR42rEzVHGhyBEKyScgeq6w"><img src="images/youtube.png"
+                    <a href="https://www.facebook.com/Kingdomhives/"><img src="images/facebook.png" class="fb" alt="Facebook icon"></a>
+                    <a href="https://www.instagram.com/kingdomhives/"><img src="images/instagram.png" class="ig" alt="Instagram Icon"></a>
+                    <a href="https://www.youtube.com/channel/UCR42rEzVHGhyBEKyScgeq6w"><img src="images/youtube.png" alt="YouTube Icon"
                             class="yt"></a>
                     <br>
+                    
+                    <br><br>
                     <a href="#home" class="btt">Back to top</a>
                 </div>
             </div>
@@ -114,9 +116,22 @@
 
 
         </div>
+        <div class="formcontainer">
+            <form novalidate>
+                <p>
+                  <label for="mail">
+                    <span>Please enter a contact email here:</span>
+                    <input type="email" id="mail" name="mail">
+                    <span class="error" aria-live="polite"></span>
+                  </label>
+                </p>
+                <button>Submit</button>
+              </form>
+        </div>
+        
 
 
-
+<script src="js.js"></script>
 </body>
 
 </html>
